# san-v2

./: .gitignore  CHANGELOG.md  README.md  calc_metrics.py  dataset_tool.py  download_models.sh  gen_images.py  legacy.py  pyproject.toml  requirements.txt  test.py  todo.md  train-v2.ipynb  train.ipynb  train.py  train_4_gpu_16x16.sbatch  train_hydra.py
.claude/skills/run-san-v2/: SKILL.md  driver.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/experiment/: ffhq16_stem.yaml  ffhq32_superres.yaml
feature_networks/: constants.py  vit.py
metrics/: metric_utils.py
pg_modules/: discriminator.py  san_modules.py
sbatch/: generate_1024x1024.sbatch  generate_256x256.sbatch  generate_512x512.sbatch  h200_train_4_gpu_16x16.sbatch  test.sbatch  train_1024x1024.sbatch  train_128x128.sbatch  train_16x16.sbatch  train_256x256.sbatch  train_32x32.sbatch  train_512x512.sbatch  train_64x64.sbatch
sbatch/a100/: train_2_gpu_1024x1024.sbatch  train_2_gpu_128x128.sbatch  train_2_gpu_16x16.sbatch  train_2_gpu_256x256.sbatch  train_2_gpu_32x32.sbatch  train_2_gpu_64x64.sbatch
sbatch/h200/: generate_4_gpu_256x256.sbatch  generate_4_gpu_64x64.sbatch  h200_train_1_gpu_128x128.sbatch  h200_train_4_gpu_1024x1024.sbatch  h200_train_4_gpu_128x128.sbatch  h200_train_4_gpu_16x16.sbatch  h200_train_4_gpu_256x256.sbatch  h200_train_4_gpu_512x512.sbatch
scripts/: run_tests.sh  train_ffhq16.sh
scripts/sbatch/a100/: generate_1_gpu_256x256.sbatch  train_2_gpu_1024x1024.sbatch  train_2_gpu_128x128.sbatch  train_2_gpu_16x16.sbatch  train_2_gpu_256x256.sbatch  train_2_gpu_32x32.sbatch  train_2_gpu_512x512.sbatch  train_2_gpu_64x64.sbatch
scripts/sbatch/h200/: h200_train_1_gpu_128x128.sbatch  h200_train_4_gpu_128x128.sbatch  h200_train_4_gpu_16x16.sbatch  h200_train_4_gpu_256x256.sbatch  h200_train_4_gpu_32x32.sbatch  h200_train_4_gpu_64x64.sbatch
sh/: _env.sh  generate_1024.sh  generate_256.sh  generate_512.sh  train_1024.sh  train_256.sh  train_512.sh
tests/: test_cuda_ops.py  test_san_modules.py  test_smoke.py
torch_utils/: checkpoint.py  custom_ops.py  gen_utils.py  misc.py
torch_utils/ops/: bias_act.cpp  bias_act.cu  bias_act.py  filtered_lrelu.cpp  filtered_lrelu.cu  filtered_lrelu.py  filtered_lrelu_ns.cu  filtered_lrelu_rd.cu  filtered_lrelu_wr.cu  upfirdn2d.cpp  upfirdn2d.cu  upfirdn2d.py
training/: dataset.py  loss.py  networks_stylegan3.py  networks_stylegan3_resetting.py  training_loop.py
