[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "san-v2"
version = "0.1.0"
description = "StyleSAN-XL fork: Slicing Adversarial Network (SAN) training framework (StyleGAN3 + Projected Discriminator)"
readme = "README.md"
requires-python = ">=3.11"

# NOTE: PyTorch / torchvision are intentionally NOT listed here. They must be
# installed separately against the correct CUDA build (see README), e.g.:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130
# Likewise, install `ninja` via conda (conda install anaconda::ninja) so the
# custom CUDA ops compile correctly -- the pip wheel can conflict.
dependencies = [
    "numpy>=1.20",
    "click>=8.0",
    "pillow>=8.3.1",
    "scipy>=1.7.1",
    "requests>=2.26.0",
    "tqdm>=4.62.2",
    "ninja>=1.10.2",
    "matplotlib>=3.4.2",
    "imageio>=2.9.0",
    "dill>=0.3.4",
    "psutil>=5.8.0",
    "regex>=2022.3.15",
    "imgui>=1.3.0",
    "glfw>=2.2.0",
    "pyopengl>=3.1.5",
    "imageio-ffmpeg>=0.4.3",
    "pyspng",
    "ftfy>=6.1.1",
    "timm==0.4.12",
    "h5py>=3.10.0",
    "hydra-core>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
