[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "san-v2"
version = "0.2.0"
description = "StyleSAN-XL fork: Slicing Adversarial Network (SAN) training framework (StyleGAN3 + Projected Discriminator)"
readme = "README.md"
requires-python = ">=3.10"

# NOTE: PyTorch / torchvision are intentionally NOT listed here. They must be
# installed separately against the correct CUDA build (see README), e.g.:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130
# Likewise, install `ninja` via conda (conda install anaconda::ninja) so the
# custom CUDA ops compile correctly -- the pip wheel can conflict.
dependencies = [
    "numpy>=1.20",
    "click>=8.0",
    "pillow>=8.3.1",
    "scipy>=1.7.1",
    "requests>=2.26.0",
    "tqdm>=4.62.2",
    "ninja>=1.10.2",
    "matplotlib>=3.4.2",
    "imageio>=2.9.0",
    "psutil>=5.8.0",
    "regex>=2022.3.15",
    "imageio-ffmpeg>=0.4.3",
    "pyspng",
    "ftfy>=6.1.1",
    "timm>=1.0.0",
    "h5py>=3.10.0",
    "tensorboard>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
# Optional: enables combra angle-Wasserstein + CMMD/FD-DINOv2/FID metrics during
# training evaluation. Training works without it (the import is guarded). Pulled
# from the private repo over git+https -- one source everywhere (§1).
combra = ["combra @ git+https://github.com/dkagramanyan/combra.git"]

[project.scripts]
san-train = "train:main"
san-gen-images = "gen_images:generate_images"
san-eval = "calc_metrics:calc_metrics"
san-prepare-data = "dataset_tool:prepare_data"

# Flat layout: the entry points live in top-level modules and the support code in
# top-level packages, so discovery is declared explicitly (auto-discovery bails on
# a flat layout with multiple top-level packages).
[tool.setuptools]
py-modules = ["train", "gen_images", "calc_metrics", "dataset_tool"]

[tool.setuptools.packages.find]
include = ["training*", "torch_utils*", "metrics*", "dnnlib*", "pg_modules*", "feature_networks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
# Vendored / third-party trees carry their own upstream style; lint only the
# code this repo actively maintains.
extend-exclude = ["dnnlib", "torch_utils/ops", "metrics", "pg_modules", "feature_networks", "training/networks_stylegan2.py", "training/networks_fastgan.py"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
